--- a/Test.html
+++ b/Test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Game Launcher</title>
-  <link rel="icon" type="image/x-icon" href="psx.png\">
+  <link rel="icon" type="image/x-icon" href="psx.png">
   <style>
     body {
       background: linear-gradient(to bottom, #000000, #003366);
