--- a/Test.html
+++ b/Test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Game Launcher</title>
-  <link rel="icon" type="image/x-icon" href="Images/psx.png">
+  <link rel="icon" type="image/x-icon" href="psx.png">
   <style>
     body {
       background: linear-gradient(to bottom, #000000, #003366);
@@ -116,10 +116,10 @@
 
   <div class="image-container">
     <a href="https://example.com">
-      <img src="Images/psx.png" alt="Description of the image">
+      <img src="psx.png" alt="Description of the image">
     </a>
     <a href="https://example.com">
-      <img src="Images/v3.png" alt="Description of the image">
+      <img src="v3.png" alt="Description of the image">
     </a>
   </div>
 
