--- a/Test.html
+++ b/Test.html
@@ -112,24 +112,9 @@
   </style>
 </head>
 <body>
-  <a href="https://www.whatismyip.com/" class="top-button">Roblox Profile</a>
+  <h2 style="color:rgb(250, 250, 250)">Key :</h2>
 
-  <div class="image-container">
-    <a href="https://example.com">
-      <img src="psx.png" alt="Description of the image">
-    </a>
-    <a href="https://example.com">
-      <img src="v3.png" alt="Description of the image">
-    </a>
-  </div>
-
-  <div class="buttons-container">
-    <a href="https://www.roblox.com/games/6284583030/Pet-Simulator-X" class="roblox-button">Play PSX</a>
-    <a href="https://www.roblox.com/games/606849621/Jailbreak" class="secondary-button">Play Jailbreak</a>
-  </div>
-  <h2 style="color:rgb(250, 250, 250)">Jailbreak Private Server :</h2>
-
-  <div class="link-output" id="copied-link" onclick="copyLink()">https://www.roblox.com/games/606849621?privateServerLinkCode=39981187060973618873115898542265</div>
+  <div class="link-output" id="copied-link" onclick="copyLink()">gy6mN4YGMdOKmyB</div>
 
   <div class="copy-link-button-container">
     <button class="copy-link-button" onclick="copyLink()">Copy Link</button>
