--- a/Test.html
+++ b/Test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Game Launcher</title>
+  <title>Lifting Simulator | Key System</title>
   <link rel="icon" type="image/x-icon" href="psx.png">
   <style>
     body {
