--- a/Test.html
+++ b/Test.html
@@ -132,7 +132,7 @@
       document.execCommand("copy");
       document.body.removeChild(tempInput);
 
-      alert("Link Copied ✅");
+      alert("Key Copied ✅");
     }
   </script>
 </body>
